--- a/scss/layouts/_cartes-restaurants.scss
+++ b/scss/layouts/_cartes-restaurants.scss
@@ -106,7 +106,7 @@
 
         white-space: nowrap;
         overflow: hidden;
-        text-overflow: "...";
+        text-overflow: ellipsis;
     }
 
 
@@ -116,7 +116,7 @@
 
         white-space: nowrap;
         overflow: hidden;
-        text-overflow: "...";
+        text-overflow: ellipsis;
     }
 
     &__price
